Code cosmetics
- Replace deprecated starterClass.newInstance() call by
  starterClass.getDeclaredConstructor().newInstance()
- Remove unused import

Signed-off-by: Alexander Kriegisch <Alexander@Kriegisch.name>